# nova

./: .env  .env.example  .gitignore  .npmignore  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION.md  LANDING_PAGE_SPEC.md  MARKET_ANALYSIS.md  NOVA_9STEP_INTEGRATION.md  Nova.ps1  README.md  SECURITY.md  docker-compose.yml  env_nova_template  install (1).sh  install.ps1  install.sh  integrations.py  n8n_nova_node.json  nova.py  nova_core.py  nova_core_requirements.txt  nova_saas.py  nova_scanner.py  package.json  pyproject.toml  requirements.txt  setup_server.sh  skill_executor.py
backend/: Dockerfile  main.py  nova.py
docs/: api-reference.md  architecture.md  contributing.md  deployment.md
frontend/: PLANS.md  ecosystem.config.cjs  index.html  tailwind.config.js
guia/: guia-completa.txt  resumen.txt
legacy/: nova_cli_legacy.py
n8n-nodes-nova/: Nova.node.js  NovaApi.credentials.js  package-lock.json  package.json
nova/: agent_skills.py  bootstrap.py  config.py  constants.py  db.py  kernel.py  platform.py  termux.py
nova_rules/: guard_5caad429_protect__nova.yaml  guard_cb8c8e9d_protect__ssh.yaml
scripts/: benchmark.py  seed_data.py
tests/: conftest.py  test_agent_skill_install.py  test_bootstrap_runtime.py  test_cli_aliases.py  test_config_compat.py  test_discovery_governance.py  test_discovery_inventory.py  test_discovery_scanner.py  test_frontend_runtime_config.py  test_gateway_router.py  test_install_distribution.py  test_intent_analyzer.py  test_kernel_startup.py  test_legacy_boot_doctor.py  test_legacy_cli_scout.py  test_legacy_cli_selector.py  (+6 more)
(+74 files in other folders)
