[project]
name = "nova-os"
version = "4.0.0"
description = "AI Governance & Control Platform"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.26.0",
  "aiosqlite>=0.19.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "cryptography>=42.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
